kubernetes/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: calculadora-deploy
  namespace: calculadora
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculadora
  template:
    metadata:
      labels:
        app: calculadora 
    spec:
      containers:
        - name: calculadora
          image: valen97/calculadora-angular:latest
          ports:
          - containerPort: 80
