kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculadora-ingress  
  namespace: calculadora
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "calculadora-angular.modelodevops.sociuschile.cl"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: calculadora-service
            port:
              number: 80
